// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip should apply the correct styles 1`] = `
<button
  class="md-chip custom-chip"
  style="width:200px"
  type="button"
>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should render correctly based on the props 1`] = `
<button
  class="md-chip"
  type="button"
>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should render correctly based on the props 2`] = `
<button
  class="md-chip md-chip--remove"
  type="button"
>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
  <i
    class="md-icon material-icons md-chip-icon md-chip-icon--rotate"
  >
    add_circle
  </i>
</button>
`;

exports[`Chip should render correctly based on the props 3`] = `
<button
  class="md-chip md-chip--avatar md-chip--remove"
  type="button"
>
  <div
    class="md-inline-block md-avatar md-avatar--default"
  >
    <div
      class="md-avatar-content"
    >
      D
    </div>
  </div>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
  <i
    class="md-icon material-icons md-chip-icon md-chip-icon--rotate"
  >
    add_circle
  </i>
</button>
`;

exports[`Chip should render correctly based on the props 4`] = `
<button
  class="md-chip md-chip--avatar md-chip--remove"
  type="button"
>
  <div
    class="md-inline-block md-avatar md-avatar--default"
  >
    <div
      class="md-avatar-content"
    >
      D
    </div>
  </div>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
  <i
    class="md-icon material-icons md-chip-icon md-chip-icon--rotate"
  >
    close
  </i>
</button>
`;

exports[`Chip should render correctly based on the props 5`] = `
<button
  class="md-chip md-chip--avatar md-chip--remove"
  type="button"
>
  <div
    class="md-inline-block md-avatar md-avatar--default"
  >
    <div
      class="md-avatar-content"
    >
      D
    </div>
  </div>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
  <svg
    class="md-icon md-chip-icon md-chip-icon--rotate"
    focusable="false"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="i932jfds"
    />
  </svg>
</button>
`;

exports[`Chip should update the class name based on hoer state 1`] = `
<button
  class="md-chip md-chip--hover"
  type="button"
>
  <span
    class="md-chip-text md-chip-text--hover"
  >
    Chip
  </span>
</button>
`;

exports[`Chip should update the class name based on hoer state 2`] = `
<button
  class="md-chip"
  type="button"
>
  <span
    class="md-chip-text"
  >
    Chip
  </span>
</button>
`;
